syntax = "proto3";
package pomegranate;

message StartDeploymentRequest {
  string project_uuid = 1;
}

message RestartDeploymentRequest {
  string project_uuid = 1;
}

message DeleteDeploymentRequest {
  string project_uuid = 1;
}

message StopDeploymentRequest {
  string project_uuid = 1;
}

message ApplyConfigDeploymentRequest {
  string config = 1;
}

message ResponseMessage {
  // Define your response message fields
    string message = 1;
}

service Pomegrenate {
  rpc StartDeployment(StartDeploymentRequest) returns (ResponseMessage) {}
  rpc RestartDeployment(RestartDeploymentRequest) returns (ResponseMessage) {}
  rpc DeleteDeployment(DeleteDeploymentRequest) returns (ResponseMessage) {}
  rpc StopDeployment(StopDeploymentRequest) returns (ResponseMessage) {}
  rpc ApplyConfigDeployment(ApplyConfigDeploymentRequest) returns (ResponseMessage) {}
}
